/*
 * Egress router gRPC service definition.
 *
 * @author Michel Megens
 * @email  michel@michelmegens.net
 */

syntax = "proto3";

package sensateiot.network;
option csharp_namespace = "SensateIoT.Platform.Network.Contracts.Services";

import "DTO/ControlMessage.proto";
import "RPC/RoutingResponse.proto";

service EgressRouter
{
	rpc EnqueueControlMessage(ControlMessage) returns (RoutingResponse);
	rpc EnqueueBulkControlMessages(ControlMessageData) returns (RoutingResponse);
}
